<resources>
    <string name="app_name">NonoConverter</string>

    <string name="title_edit_image_activity">Editing</string>
    <string name="action_convert">Convert</string>
    <string name="action_open_crop">Crop</string>
    <string name="action_open_columns">Settings</string>
    <string name="edit_image_view_description">Convertible image</string>
    <string name="msg_process_image">Processing image…</string>
    <string name="action_change">Change</string>

    <string name="title_result_activity">Result</string>
    <string name="action_save">Save</string>
    <string name="msg_save">What would you like to save?</string>
    <string name="msg_open_image">Open image via</string>
    <string name="action_share">Share</string>
    <string name="msg_share">What would you like to share?</string>
    <string name="msg_share_image">Share image via</string>
    <string name="action_thumbnail">Thumbnail</string>
    <string name="action_nonogram">Nonogram</string>
    <string name="action_home_return">Home</string>
    <string name="title_dialog_home_return">Return home</string>
    <string name="msg_home_return">Are you sure that you want to return home?
        Nonogram will be lost if you don\'t save it.</string>
    <string name="action_return">RETURN</string>
    <string name="action_cancel">CANCEL</string>
    <string name="msg_save_image_done">Image saved in %1$s</string>
    <string name="msg_save_image_fail">Failed to save the image</string>
    <string name="msg_func_unavailable">Functionality unavailable</string>
    <string name="msg_share_image_fail">Failed to prepare the image for the
        sharing</string>
    <string name="action_open">OPEN</string>
    <string name="action_retry">RETRY</string>

    <string name="action_ok">OK</string>
    <string name="title_dialog_convert">Something went wrong…</string>
    <string name="msg_convert">Oops, it looks like there are no solvable
        crossword puzzles in this range.\nYou can change the crossword
        size, crop the image or invert the colors and then try again.</string>

    <string name="action_load_image">Load Image</string>
    <string name="action_open_about">About</string>
    <string name="action_open_help">Help</string>

    <string name="msg_description">Android mobile application for converting
        images to black-and-white nonogram. You can:\n
        - Select an image from the gallery or take a photo\n
        - Crop and rotate selected image\n
        - Select size of nonogram\n
        - Save nonogram and its thumbnail\n
        - Share nonogram and its thumbnail\nApplication converts selected image
        to a nonogram, which has a single logical solution.</string>
    <string name="msg_version">Version %1$s</string>
    <string name="title_about_activity">About</string>
    <string name="msg_contact">If you have any questions, suggestions or
        complaints, please contact us:
    </string>
    <string name="msg_email">nonoconverter@gmail.com</string>
    <string name="msg_send_email">Send email via</string>
    <string name="msg_toemail">\n\nApp version: %1$s\nAndroid: %2$s
        (%3$d)\nDevice: %4$s / %5$s / %6$s / %7$s\n</string>

    <string name="title_help">Help</string>
    <string name="title_help_info">Information</string>
    <string name="help_info">The process of converting pictures into Japanese
        Crossword is divided into three sections, presented below. To read
        more about each of them, you must click on the icon on the
        left. On each screen (except the main screen), it is possible to go
        back by clicking on the standard \'back\' button in the navigation
        bar or on the \'back\' button in the upper left corner on
        the action bar.</string>
    <string name="title_help_sections">Sections</string>
    <string name="title_help_section_load_image">Load image</string>
    <string name="title_help_section_edit_image">Edit image</string>
    <string name="title_help_section_result">Result</string>
    <string name="help_section_load_image">Upload images from the gallery and
        receive photos from the camera.</string>
    <string name="help_section_edit_image">Rotation, flipping, and cropping
        of a picture. Setting the sizes of the crossword.</string>
    <string name="help_section_result">Viewing and saving the result.</string>
    <string name="help_info_load_image">Before the picture is converted into
        a Japanese Crossword, it needs to be uploaded.</string>
    <string name="title_help_beginning">Beginning</string>
    <string name="help_beginning_load_image">To load an image into the
        application, you need to click on the \'LOAD IMAGE\' button on the
        main screen, then you will go to the screen to select an image.</string>
    <string name="title_help_image_picker">Image picker</string>
    <string name="help_image_picker">All images on the device are presented
        in the form of folders in which they are located. When you
        click on a particular folder, all the images that are in it appear.
        When you click on a specific image, it is loaded into the
        application.\n\nAlso available to receive a photo from the camera. To
        do this, in the upper right corner on the action bar you need to
        click on the camera icon and the camera will open. After that, you
        can take a picture.\n\nAfter selecting an image from the gallery or
        photo, you will be taken to the screen to process the loaded image.
    </string>
    <string name="help_info_edit_image">After loading the image, it can be
        cropped or rotated 90 degrees. To convert an image into the Japanese
        Crossword, you need to set the dimensions of the crossword.</string>
    <string name="help_crop">To crop, rotate and flip the image, click on the
        \'CROP\' button in the lower left corner.\n\nYou can rotate the image
        90, 180 and 270 degrees and flip the image horizontally. To do this,
        click on the icons at the bottom.\n\nYou can crop the image by selecting
        the desired rectangle. To fixate your choice, you need to click on the
        check mark in the upper right corner on the action bar</string>
    <string name="help_columns">To set the size of the crossword or invert
        colors in the crossword, click on the \'SETTINGS\' button in the lower
        right corner.\n\nYou can view an approximate result. Also you can see
        current size and range of possible sizes after converting above image.
        There is a slider that provides a choice of the number of columns near
        the image. The number of rows is calculated automatically. There is the
        selected image for conversion in the center of the screen, over of
        which a grid is drawn.\n\nAlso, there is a switch that allows you to
        specify whether to invert the colors in a crossword puzzle near the
        slider. If you change the switch value, the colors will be changed
        according to the new value.\n\nTo fixate your choice, you need to click
        on the check mark in the upper right corner on the action bar.</string>
    <string name="help_convert">After you have configured everything you need
        to click on \'Convert\' in the upper right corner on the action bar.
        After that, a pop-up window with a progress bar will appear.\n\nProgress
        bar displays a conversion progress - how many crossword puzzles with
        sizes from a given range have already been tested for solvability.
        As soon as the solvable crossword found, the conversion finishes.
        You may click on the standard \'back\' button in the navigation bar
        to cancel the conversion.</string>
    <string name="title_help_save_result">Save result</string>
    <string name="title_help_share_result">Share result</string>
    <string name="help_info_result">After converting the image into the
        Japanese Crossword, you can see the result, save and share it.</string>
    <string name="help_save">You can save thumbnail (the solution of the
        crossword)or unsolved Japanese Crossword by clicking on the \'SAVE\'
        button in the lower left corner and choosing the appropriate item
        in the dialog.\n\nOn saving the miniature, the image size in pixels
        is equal to the size of the crossword puzzle.\n\nIf the save fails,
        you can try again by pressing the \'RETRY\' button on the pop-up bar
        in the lower part of the screen.\n\nIf the save succeed, this bar will
        contain the path to the file and the \'OPEN\' button. By clicking it and
        choosing the view-application, you can view the saved image.</string>
    <string name="help_share">You can share thumbnail or unsolved
        Japanese Crossword by clicking on the \'SHARE\' button in the lower
        right corner and choosing the appropriate item in the dialog.
        You will be offered with a list of applications through which you can
        share the image.\n\nIn case of failure, you can try again by pressing
        the \'RETRY\' button on the pop-up bar in the lower part of the screen.
    </string>
    <string name="help_view_result">You can look at the resulting crossword
        puzzle. In the center of the screen is a solved Japanese Crossword.
        It can be moved and increased or decreased.</string>
    <string name="help_home_return">A quick return to the initial screen is
        available. Just click on the house icon in the upper right corner
        on the action bar.</string>

    <string name="action_rotate">Rotate</string>
    <string name="action_flip">Flip</string>
    <string name="action_switch">Invert nonogram</string>
    <string name="title_columns_frame_portrait">current: %1$d, %2$d
        range: %3$d\u00F7%4$d, %5$d\u00F7%6$d</string>
    <string name="title_columns_frame_landscape">%1$d, %2$d\n
        %3$d\u00F7%4$d, %5$d\u00F7%6$d</string>

    <string name="title_image_picker">Albums</string>
</resources>
