<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_view_main"
            android:layout_width="0dp"
            android:layout_height="542dp"
            android:contentDescription="@string/edit_image_view_description"
            app:layout_constraintBottom_toTopOf="@+id/linear_layout_edit_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linear_layout_edit_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorLightGrey"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/button_crop"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginEnd="1dp"
                android:layout_marginRight="1dp"
                android:layout_weight="1"
                android:background="@color/colorLightBlue"
                android:drawableTop="@drawable/ic_crop_rotate"
                android:drawablePadding="5dp"
                android:paddingTop="8dp"
                android:paddingBottom="5dp"
                android:text="@string/action_open_crop"
                android:textColor="@color/colorLightGrey"
                android:textSize="14sp" />

            <Button
                android:id="@+id/button_columns"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginStart="1dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:background="@color/colorLightBlue"
                android:drawableTop="@drawable/ic_grid"
                android:drawablePadding="5dp"
                android:paddingTop="8dp"
                android:paddingBottom="5dp"
                android:text="@string/action_open_columns"
                android:textColor="@color/colorLightGrey"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>