<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_background"
    tools:context=".ui.start.StartActivity">

    <include
        android:id="@+id/tbToolbar"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="bottom|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbToolbar"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button_load_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorRiverBed"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/action_load_image"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/button_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorRiverBed"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/action_open_about"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/button_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="128dp"
            android:background="@color/colorRiverBed"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/action_open_help"
            android:textAllCaps="true"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
