<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightBlue"
    tools:context=".ui.about.AboutActivity">

    <TextView
        android:id="@+id/text_view_contact"
        android:layout_width="253dp"
        android:layout_height="97dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/msg_contact"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_description"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:id="@+id/text_view_app_name"
        android:layout_width="162dp"
        android:layout_height="27dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/msg_app_name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/image_view_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_about"
        app:layout_constraintVertical_bias="0.966" />

    <TextView
        android:id="@+id/text_view_version"
        android:layout_width="99dp"
        android:layout_height="34dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/msg_version"
        app:layout_constraintBottom_toTopOf="@+id/text_view_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_logo"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text_view_description"
        android:layout_width="323dp"
        android:layout_height="158dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/msg_description"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_view_logo"
        app:layout_constraintVertical_bias="0.22" />

    <include
        android:id="@+id/toolbar_about"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="207dp"
        android:layout_height="157dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="416dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_about"
        app:layout_constraintVertical_bias="0.851"
        app:srcCompat="@drawable/panda_thumbnail" />

</androidx.constraintlayout.widget.ConstraintLayout>